Revise tool description in template-veille-tech.html
Updated the tool description for Wazuh Suricata lab.

--- a/template-veille-tech.html
+++ b/template-veille-tech.html
@@ -69,7 +69,7 @@
                     <h3 class="tool-title">Détection lab Wazuh Suricata Kali phishing</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Permet de créer un lab contenant un Kali pour faire des tests de fishing
                 </p>
                 <footer>
                     <a href="https://github.com/jduru213-1/suricata-wazuh-c2-detection-lab" target="_blank" class="tool-link" style="color: black;">
