ajout de fichiers à la veille

--- a/template-veille-tech.html
+++ b/template-veille-tech.html
@@ -84,7 +84,7 @@
                     <h3 class="tool-title">IA pour cybersécurité</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Des IAs intéressantes
                 </p>
                 <footer>
                     <a href="https://github.com/fr0gger/Awesome-GPT-Agents.git" target="_blank" class="tool-link" style="color: black;">
@@ -96,13 +96,13 @@
             <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">Nom de l'outil</h3>
+                    <h3 class="tool-title">Suricata + Kali + Wazuh agent</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    installation rapide de suricata, kali et wazuh pour faire un lab
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/jduru213-1/suricata-wazuh-c2-detection-lab" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
@@ -111,13 +111,13 @@
              <!-- Template de card - Exemple 1 -->
             <article class="tool-card">
                 <div class="card-header">
-                    <h3 class="tool-title">Nom de l'outil</h3>
+                    <h3 class="tool-title">Installation DNS en 1 clic</h3>
                 </div>
                 <p class="tool-description">
-                    [Description de l'outil - Expliquer à quoi il sert, ses avantages, et dans quels contextes l'utiliser]
+                    Installation DNS à modifier
                 </p>
                 <footer>
-                    <a href="[URL du repository]" target="_blank" class="tool-link" style="color: black;">
+                    <a href="https://github.com/MrKnights1/bind9-dns" target="_blank" class="tool-link" style="color: black;">
                         📂 Voir le repository
                     </a>
                 </footer>
